docs: add --output-json documentation
Signed-off-by: Nicholas Smith <nicholas@nbembedded.com>

--- a/docs/man/mmcli.1
+++ b/docs/man/mmcli.1
@@ -710,6 +710,10 @@ Send a DTMF sequence through an ongoing call.
 
 .SH APPLICATION OPTIONS
 .TP
+.B \-J, \-\-output\-json
+Run action with machine-friendly JSON output, to be used e.g. by
+shell scripts that rely on mmcli operations.
+.TP
 .B \-K, \-\-output\-keyvalue
 Run action with machine-friendly key-value output, to be used e.g. by
 shell scripts that rely on mmcli operations.
