--- a/docs/man/ModemManager.8
+++ b/docs/man/ModemManager.8
@@ -25,8 +25,8 @@ from the command line.
 Specify which ports are probed and how:
 .RS 9
 .TP
-\fB'WHITELIST-ONLY'\fR
-Only devices or ports explicitly whitelisted with the 'ID_MM_DEVICE_PROCESS' udev tag are probed.
+\fB'ALLOWLIST-ONLY'\fR
+Only devices or ports explicitly allowlisted with the 'ID_MM_DEVICE_PROCESS' udev tag are probed.
 .TP
 \fB'STRICT'\fR
 Only the TTY ports that are heuristically determined to be very likely to be modem ports are probed. Nay end up ignoring some devices.
