--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@
 # scootergrisen, 2019.
 msgid ""
 msgstr ""
-"Project-Id-Version: ModemManager master\n"
+"Project-Id-Version: ModemManager main\n"
 "Report-Msgid-Bugs-To: https://gitlab.freedesktop.org/mobile-broadband/"
 "ModemManager/issues\n"
 "POT-Creation-Date: 2020-09-18 10:30+0200\n"
