--- a/po/hu.po
+++ b/po/hu.po
@@ -6,7 +6,7 @@
 # Balázs Úr <ur.balazs at fsf dot hu>, 2021.
 msgid ""
 msgstr ""
-"Project-Id-Version: modemmanager master\n"
+"Project-Id-Version: modemmanager main\n"
 "Report-Msgid-Bugs-To: https://gitlab.freedesktop.org/mobile-broadband/"
 "ModemManager/issues\n"
 "POT-Creation-Date: 2020-09-18 15:29+0000\n"
