--- a/po/sv.po
+++ b/po/sv.po
@@ -6,7 +6,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ModemManager master\n"
+"Project-Id-Version: ModemManager main\n"
 "Report-Msgid-Bugs-To: https://gitlab.freedesktop.org/mobile-broadband/"
 "ModemManager/issues\n"
 "POT-Creation-Date: 2020-09-18 15:29+0000\n"
